# TrackStar

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  sdist.yml
docs/: Makefile
docs/src/: Makefile  conf.py  index.rst  install.rst  science-documentation.rst  statistical-justification.rst
docs/src/_static/css/: custom.css
docs/src/api/: Makefile  index.rst
docs/src/benchmarks/: __main__.py  common.py  dimensionality.py  index.rst  nthreads.py  samplesize.py  style.mplstyle  tracksize.py
docs/src/clib/: Makefile  index.rst
docs/src/developers/: bug_reports.rst  contributors.rst  index.rst  license.rst
docs/src/developers/contributing/: Makefile  benchmarking.rst  index.rst  trackstar.benchmarks.rst
docs/src/science-documentation/: index.rst
docs/src/tutorials/: first.ipynb  index.rst  samples.ipynb
track-fitting/: __init__.py
track-fitting/core/src/: Makefile  matrix.c  matrix.h
trackfitting/: Makefile  __init__.py  version.py
trackfitting/core/: Makefile
trackfitting/core/src/: Makefile  matrix.c  matrix.h
trackfitting/docs/: Makefile
trackstar/: Makefile  __init__.py  exceptions.py  version.py
trackstar/benchmarks/: Makefile  __init__.py  __main__.py  benchmark.py  discovery.py
trackstar/core/: Makefile  __init__.py  covariance_matrix.pxd  covariance_matrix.pyx  datum.pxd  datum.pyx  matrix.pxd  matrix.pyx  multithread.pxd  multithread.pyx  sample.pxd  sample.pyx  track.pxd  track.pyx  utils.pxd  utils.py  utils.pyx
trackstar/core/benchmarks/: Makefile  __init__.py  benchmark_covariance_matrix.py  benchmark_datum.py  benchmark_matrix.py
trackstar/core/src/: Makefile  datum.c  datum.h  debug.h  likelihood.c  likelihood.h  matrix.c  matrix.h  multithread.h  quadrature.c  quadrature.h  sample.c  sample.h  track.c  track.h  utils.c  utils.h
trackstar/core/tests/: Makefile  test_covariance_matrix.py  test_datum.py  test_matrix.py
trackstar/docs/: Makefile  __main__.py  apiref.py  benchmarks.py  clib.py  config.py  doctree.py
trackstar/tests/: Makefile  __init__.py  __main__.py
